# Fixed-Wing-Aircraft-Hive-Based-Multi-UAV-Agricultural-OPT-Simulation-System

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1
c_include/: scout_opt.h  scout_opt_config.h  scout_opt_diagnostics.h  scout_opt_sitl.h
c_src/: config_loader.c  diagnostics.c  main.c  scout_opt.c  sitl_bridge.c  visual_export.c
configs/: Xiaolizhuang_from_qgc_fence.json  manual_field_plan.example.json  manual_scout.example.json  manual_scout_area_from_boundary.example.json  manual_scout_two_blocks.example.json  opt_visual_plan.json  qgc_fence_scenario.json  qgc_polygon_example.plan  qgc_scenario_from_plan.json  sitl_8.json  sitl_qgc_relaxed.parm  test1_from_qgc_fence.json  xiaolizhuang_opt_visual_plan.json
docs/: xiaolizhuang_satellite_overlay.html  xiaolizhuang_satellite_overlay.kml
legacy_python/: pyproject.toml
legacy_python/src/scout_opt/: __init__.py  cli.py  online_controller.py  sitl_cli.py
legacy_python/src/scout_opt/adapters/: __init__.py  base.py  mavsdk_adapter.py  sim_adapter.py
legacy_python/src/scout_opt/core/: __init__.py  charging.py  config.py  coverage.py  depot_planner.py  emergency.py  engine.py  field_plan.py  geo.py  manual_scout.py  models.py  opt.py  opt_bridge.py  opt_engine.py  radius_scheduler.py  resources.py  safety.py  scheduler.py  scout.py  tasks.py  weather.py
legacy_python/tests/: test_depot_planner.py  test_manual_workflow.py  test_opt_engine.py  test_radius_scheduler.py  test_simulation.py  test_weather.py
planexample/: Xiaolizhuang.plan  test1.plan
scripts/: ardupilot_real_router.py  qgc_demo_bridge.py  (+14 more)
(+2 files in other folders)
